--- a/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/components/Sidebar.module.css
+++ b/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/components/Sidebar.module.css
@@ -14,6 +14,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  margin-top: calc(0px - 1.5rem - 6px); /*Margin negativa*/
+}
+
+.avatar {
+  width: calc(3rem + 12px); /* somando junto os px da border e do outline 4px * 2 e 2px * 2 */
+  height: calc(3rem + 12px);
+  border-radius: 8px;
+  border: 4px solid var(--gray-800);
+  outline: 2px solid var(--green-500); /* vai criar um contorno fora da borda */
+}
+
+.profile strong {
+  margin-top: 1rem;
+  color: var(--gray-100);
+  line-height: 1.6;
+}
+
+.profile span {
+  font-size: 0.875rem; /*0.875 * 16 = 14px    ou 14px / 16 = 0.875*/
+  color: var(--gray-400);
+  line-height: 1.6;
 }
 
 .sidebar footer {
@@ -36,4 +58,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  gap: 0.5rem;
+
+  transition: color 0.1s, background-color 0.1s;
+}
+
+.sidebar footer a:hover {
+  background: var(--green-500);
+  color: var(--white);
 }
