--- a/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/components/Sidebar.module.css
+++ b/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/components/Sidebar.module.css
@@ -24,6 +24,7 @@
   border-radius: 8px;
   border: 4px solid var(--gray-800);
   outline: 2px solid var(--green-500); /* vai criar um contorno fora da borda */
+  background-color: var(--gray-800); /*Adicione este código para evitar problemas com imagens .png sem fundos.*/
 }
 
 .profile strong {
