--- a/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/components/Post.module.css
+++ b/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/components/Post.module.css
@@ -1,3 +1,69 @@
 .post {
-  
+  background: var(--gray-800);
+  border-radius: 8px;
+  padding: 2.5rem;
+}
+
+.post + .post { /* Estilizar todo o post que contenha outro post abaixo dele*/
+  margin-top: 2rem;
+}
+
+.content {
+  line-height: 1.6;
+  color: var(--gray-300);
+  margin-top: 1,5rem;
+}
+
+.content p {
+  margin-top: 1rem;
+}
+
+.content a {
+  font-weight: bold;
+  color: var(--green-500);
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+.content a:hover {
+  color: var(--green-300);
+}
+
+.post > header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.post > header time {
+  font-size: 0.875rem;
+  color: var(--gray-400);
+}
+
+.author {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.author img {
+  width: calc(3rem + 12px); /* somando junto os px da border e do outline 4px * 2 e 2px * 2 */
+  height: calc(3rem + 12px);
+  border-radius: 8px;
+  border: 4px solid var(--gray-800);
+  outline: 2px solid var(--green-500); /* vai criar um contorno fora da borda */
+  background-color: var(--gray-800); /*Adicione este código para evitar problemas com imagens .png sem fundos.*/
+}
+
+.authorInfo strong {
+  display: block;
+  color: var(--gray-100);
+  line-height: 1.6;
+}
+
+.authorInfo span {
+  display: block;
+  font-size: 0.875rem;
+  color: var(--gray-400);
+  line-height: 1.6;
 }
