--- a/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/components/Post.module.css
+++ b/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/components/Post.module.css
@@ -67,3 +67,56 @@
   color: var(--gray-400);
   line-height: 1.6;
 }
+
+.commentForm {
+  width: 100%;
+  margin-top: 1.5rem;
+  padding-top: 1.5rem;
+  border-top: 1px solid var(--gray-600);
+}
+
+.commentForm > strong {
+  line-height: 1.6rem;
+  color: var(--gray-100);
+}
+
+.commentForm textarea {
+  width: 100%;
+  background: var(--gray-900);
+  border: 0;
+  resize: none; /*nao deixar usuario redimensionar a textarea */
+  height: 6rem;
+  padding: 1rem;
+  border-radius: 8px;
+  color: var(--gray-100);
+  line-height: 1.4rem;
+  margin-top: 1rem;
+}
+
+.commentForm footer { /*criar um footer ou uma div em volta do botao para fazer ele aparecer so quando clica no textarea*/
+  visibility: hidden;
+  max-height: 0;
+}
+
+.commentForm:focus-within footer { /*em seguida colocar os seguintes parametros para aparecer o button*/
+  visibility: visible;
+  max-height: none;
+}
+
+.commentForm button[type=submit] {
+  padding: 1rem 1.5rem;
+  margin-top: 1rem;
+  border-radius: 8px;
+  border: 0;
+  background: var(--green-500);
+  color: var(--white);
+  font-weight: bold;
+  cursor: pointer;
+
+  transition: background-color 0.1s;
+
+}
+
+.commentForm button[type=submit]:hover {
+  background-color: var(--green-300);
+}
