--- a/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/App.module.css
+++ b/01_Fundamentos do ReactJS/01-fundamentos-reactjs/src/App.module.css
@@ -8,3 +8,21 @@
    gap: 2rem; /* 32px = 16 * 2*/
    align-items: flex-start; /* fazendo ficar alinhado para o topo nao fazendo isso vai ficar tentando os dois elementos ter a mesma altura*/
 }
+
+@media (max-width: 768px) {
+   html {
+      font-size: 87.5%;
+   }
+
+   .wrapper {
+      grid-template-columns: 1fr;
+   }
+}
+
+/* regra de 3 para saber a porcentagem da fonte para mudar quando usar REM em todo o site
+16 px é 1 rem para convertem 14px em porcentagem precisa usar regra de 3
+16 -> 100%
+14 -> x
+
+14 x 100 / 16
+*/
